--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "myweddingsite",
-  "homepage": "https://sanmays.github.io/sanshine",
+  "homepage": "https://sanmays.github.io/myweddingsite",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,8 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
