Update homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweddingsite",
-  "homepage": "https://sanmays.github.io/myweddingsite",
+  "homepage": "https://www.sanshine.co.in",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
